# h323server

./: .gitignore  .gitmodules  CMakeLists.txt  InstallToSys.sh  README.md  build-gategeeker.sh  build-thirdparty.sh
10-common/include/: mtlog.hpp  openh323buildopts.h
10-common/include/h235/: h235caps.h
10-common/lib/releaselib/linux64/: BUILD.gn
10-common/product/: generate_ycm_conf.sh
10-common/version/config/luascript/: acquire_lock.lua  atomic_increment.lua  batch_set_hash.lua  check_and_update.lua  get_next_id.lua  rate_limit.lua  release_lock.lua  validate_token.lua
20-mtcbb/: .gn  BUILD.gn
20-mtcbb/demo/: CMakeLists.txt  build.sh  main.cpp
20-mtcbb/demo/source/: main.cpp
20-mtcbb/httpserver/: CMakeLists.txt  build.sh  config.json  model.json
20-mtcbb/httpserver/cmake/: FindDrogon.cmake  FindJsonCpp.cmake  FindTrantor.cmake  Findmtlog.cmake
20-mtcbb/httpserver/include/: JsonCtrl.hpp  LoginHandler.hpp  RedisUtils.hpp  RestfulApi.hpp  TokenCleanupService.hpp  UserService.hpp
20-mtcbb/httpserver/include/adapters/: RedisClientAdapter.hpp
20-mtcbb/httpserver/include/controllers/: InternalController.hpp  RestfulApi.hpp  SystemController.hpp
20-mtcbb/httpserver/include/filters/: ApiLevelFilter.hpp  AuthFilter.hpp
20-mtcbb/httpserver/include/handlers/: GetInfoHandler.hpp  LoginHandler.hpp
20-mtcbb/httpserver/include/infrastructure/: LuaScriptManager.hpp  RedisUtils.hpp  ServiceContainer.hpp
20-mtcbb/httpserver/include/interfaces/: IRedisClient.hpp  ISystemService.hpp  IUserRepository.hpp  IUserService.hpp
20-mtcbb/httpserver/include/models/: UserTokens.h  Users.h
20-mtcbb/httpserver/include/repositories/: UserRepository.hpp
20-mtcbb/httpserver/include/services/: SystemService.hpp  UserService.hpp
20-mtcbb/httpserver/include/utils/: ApiLevelContext.hpp
20-mtcbb/httpserver/source/: JsonCtrl.cpp  LoginHandler.cpp  LuaScriptManager.cpp  RedisUtils.cpp  RestfulApi.cpp  UserService.cpp  main.cpp
20-mtcbb/httpserver/source/controllers/: InternalController.cpp  RestfulApi.cpp  SystemController.cpp
20-mtcbb/httpserver/source/filters/: AuthFilter.cpp
20-mtcbb/httpserver/source/handlers/: GetInfoHandler.cpp  LoginHandler.cpp
20-mtcbb/httpserver/source/infrastructure/: ServiceContainer.cpp
20-mtcbb/httpserver/source/models/: UserTokens.cpp  Users.cpp
20-mtcbb/httpserver/source/repositories/: UserRepository.cpp
20-mtcbb/httpserver/source/services/: SystemService.cpp  TokenCleanupService.cpp  UserService.cpp
20-mtcbb/httpserver/tests/: CMakeLists.txt  README.md  boost_test.ini  build-corverage.sh  build.sh  fix.sh  run_tests.sh  test_user_service.cpp
20-mtcbb/httpserver/tests/mocks/: MockRedisClient.hpp  MockUserRepository.hpp  TestHelpers.hpp
20-mtcbb/mtlog/: BUILD.gn  CMakeLists.txt  Config.cmake.in  build.sh  sources.gni
20-mtcbb/mtlog/source/: mtlog.cpp
